exam2016-02-09/exam_report_colin2016-02-09/2-1-reverse_bits.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1r4p13.42.fr
Darwin 15.3.0 x86_64
$> date
Tue Feb  9 11:49:29 CET 2016
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 7.0.2 (clang-700.1.81)
Target: x86_64-apple-darwin15.3.0
Thread model: posix
$> clang --version
Apple LLVM version 7.0.2 (clang-700.1.81)
Target: x86_64-apple-darwin15.3.0
Thread model: posix

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2016/piscine-c-formation-c-exam-formation/exam_20160209/ckramer

= Git history ==================================================================
$> git -C /var/folders/3t/xm7hk_qd1r7cybvzhnd6pfbr0000gq/T/tmp62QKlC/user log --pretty='%H - %an, %ad : %s'
3763e00716b11955d7e8c5b938a2cc1132ad4cb7 - Exam 42, Tue Feb 9 11:49:02 2016 +0100 : reverse_bits for 11pts
f559f0b1f705e3c39b6d4ba89f76e1e47d5d4e21 - Exam 42, Tue Feb 9 11:37:58 2016 +0100 : do op for 16pts
b419328dfe53a8eb119b0176ea2b6573cf84a4b9 - Exam 42, Tue Feb 9 10:35:35 2016 +0100 : strcmp for 16pts
844152fe8de5c1a5d9da3f78bd7c6228e0ee9020 - Exam 42, Tue Feb 9 10:12:11 2016 +0100 :  hello for 16 pts
 
= Collected files ==========================================
$> ls -lAR /var/folders/3t/xm7hk_qd1r7cybvzhnd6pfbr0000gq/T/tmp62QKlC/user
total 8
-rw-r--r--  1 deepthought  deepthought  1158 Feb  9 11:49 __GIT_HISTORY
drwxr-xr-x  6 deepthought  deepthought   204 Feb  9 11:49 do_op
drwxr-xr-x  3 deepthought  deepthought   102 Feb  9 11:49 ft_strcpy
drwxr-xr-x  3 deepthought  deepthought   102 Feb  9 11:49 hello
drwxr-xr-x  3 deepthought  deepthought   102 Feb  9 11:49 reverse_bits

/var/folders/3t/xm7hk_qd1r7cybvzhnd6pfbr0000gq/T/tmp62QKlC/user/do_op:
total 32
-rw-r--r--  1 deepthought  deepthought  1311 Feb  9 11:49 ft_do_action.c
-rw-r--r--  1 deepthought  deepthought  1104 Feb  9 11:49 ft_do_op.c
-rw-r--r--  1 deepthought  deepthought  1265 Feb  9 11:49 ft_doop.h
-rw-r--r--  1 deepthought  deepthought  1263 Feb  9 11:49 ft_operation.c

/var/folders/3t/xm7hk_qd1r7cybvzhnd6pfbr0000gq/T/tmp62QKlC/user/ft_strcpy:
total 8
-rw-r--r--  1 deepthought  deepthought  1023 Feb  9 11:49 ft_strcpy.c

/var/folders/3t/xm7hk_qd1r7cybvzhnd6pfbr0000gq/T/tmp62QKlC/user/hello:
total 8
-rw-r--r--  1 deepthought  deepthought  1141 Feb  9 11:49 hello.c

/var/folders/3t/xm7hk_qd1r7cybvzhnd6pfbr0000gq/T/tmp62QKlC/user/reverse_bits:
total 8
-rw-r--r--  1 deepthought  deepthought  1070 Feb  9 11:49 reverse_bits.c
 
= reverse_bits =================================================================
$> clang -Wextra -Wall -Werror main.c reverse_bits.c -o user_exe 
reverse_bits.c:21:3: error: variable 'temp' is uninitialized when used here [-Werror,-Wuninitialized]
                temp |= ((octet >> i) & 1) << (7 - i);
                ^~~~
reverse_bits.c:16:20: note: initialize the variable 'temp' to silence this warning
        unsigned char   temp;
                            ^
                             = '\0'
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
